--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
     - assets/cancer-and-genomics/
     - assets/institutional/
     - assets/corporate/
+    - assets/payments/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
