--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^1.1.6
   camera: ^0.10.0
   provider: ^6.0.1
+  fluttertoast: ^8.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,7 +57,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  image_path: "assets/images/nm-logo.png"
+  image_path: "assets/images/bkp-nm-logo.png"
   android: true
   ios: true
   remove_alpha_ios: true
